# r2dma

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: client.rs  server.rs
r2dma/: Cargo.toml  build.rs
r2dma-cli/: Cargo.toml
r2dma-cli/src/: main.rs
r2dma-sys/: Cargo.toml  README.md  build.rs
r2dma-sys/src/: lib.rs
r2dma/examples/: client.rs  r2dma.rs  server.rs  socket_loopback.rs
r2dma/src/: error.rs  lib.rs  verbs.rs
r2dma/src/buf/: aligned_buffer.rs  buffer.rs  buffer_pool.rs  mod.rs  rdma_buffer.rs  registered_buffer.rs
r2dma/src/core/: buffer.rs  buffer_pool.rs  card.rs  cards.rs  channel.rs  comp_queues.rs  config.rs  device.rs  devices.rs  event_loop.rs  manager.rs  mod.rs  queue_pair.rs  socket.rs  state.rs  waiter.rs  work.rs  work_id.rs  wr_id.rs
r2dma/src/ib/: comp_channel.rs  comp_queue.rs  context.rs  devices.rs  gid.rs  memory_region.rs  mod.rs  protection_domain.rs
r2dma/src/ibv/: comp_channel.rs  comp_queue.rs  context.rs  device.rs  device_list.rs  devices.rs  endpoint.rs  gid.rs  memory_region.rs  mod.rs  protection_domain.rs  queue_pair.rs  verbs.rs  work_completion.rs  wrapper.rs
r2dma/src/utils/: error.rs  wrapper.rs
r2pc/: Cargo.toml
r2pc-demo/: Cargo.toml
r2pc-demo/src/: lib.rs
r2pc-macro/: Cargo.toml
r2pc-macro/src/: lib.rs
r2pc/examples/: r2pc_info.rs
r2pc/src/: client.rs  connection_pool.rs  constants.rs  context.rs  core_state.rs  error.rs  lib.rs  meta.rs  msg_waiter.rs  server.rs  services.rs  socket_pool.rs  transport.rs
r2pc/src/basics/: error.rs  mod.rs  msg.rs  socket.rs
r2pc/src/core_service/: info_service.rs  mod.rs
r2pc/src/core_services/: info_service.rs  mod.rs
r2pc/src/services/: info_service.rs  mod.rs  service_manager.rs  services.rs
r2pc/src/sockets/: mod.rs  rdma_socket.rs  rdma_socket_manager.rs  socket.rs  socket_getter.rs  tcp_socket.rs  tcp_socket_manager.rs
r2pc/src/state/: mod.rs  msg_waiter.rs  services.rs
r2pc/src/states/: context.rs  mod.rs  socket_pool.rs  state.rs
r2pc/tests/: test_callback.rs  test_concurrent.rs  test_service.rs
rpc/: Cargo.toml
rpc-macro/: Cargo.toml
rpc-macro/src/: lib.rs
rpc/src/: call_context.rs  client.rs  context.rs  error.rs  lib.rs  meta.rs  transport.rs
src/core/: buffer.rs  card.rs  cards.rs  channel.rs  event_loop.rs  mod.rs  socket.rs  work_id.rs  work_pool.rs
src/ibv/: comp_channel.rs  comp_queue.rs  context.rs  device.rs  device_list.rs  endpoint.rs  gid.rs  memory_region.rs  mod.rs  protection_domain.rs  queue_pair.rs  verbs.rs  work_completion.rs
src/utils/: aligned_buffer.rs  error.rs  hex.rs  mod.rs  wrapper.rs
