[workspace]
members = ["r2dma", "r2pc", "r2pc-demo", "r2pc-macro"]
resolver = "2"

[workspace.package]
authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
edition = "2021"
homepage = "https://github.com/SF-Zhou/r2dma"
repository = "https://github.com/SF-Zhou/r2dma"
description = "A Rust RDMA library"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
libc = "0"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0"
