[workspace]
members = ["r2dma", "r2pc", "r2pc-demo", "r2pc-macro"]
resolver = "2"

[workspace.package]
authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
edition = "2021"
homepage = "https://github.com/SF-Zhou/r2dma"
repository = "https://github.com/SF-Zhou/r2dma"
description = "A Rust RDMA library"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
foldhash = "0.1"
libc = "0"
lockmap = "0"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tikv-jemallocator = "0"
tracing = "0"
tracing-subscriber = "0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0"
