[package]
name = "r2dma-cli"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
r2dma = { version = ">=0.1.2", path = "../r2dma" }

clap.workspace = true

[[bin]]
name = "r2dma"
path = "src/main.rs"
