[package]
name = "r2dma-sys"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[build-dependencies]
bindgen = { version = "0", features = ["experimental"] }
pkg-config = "0"

[dependencies]
libc = "0"
