[package]
name = "r2dma"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
derse = "0"
libc = "0"
nix = { version = "0", features = ["event"] }
r2dma-sys = { version = "0", path = "../r2dma-sys" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0"
tracing = "0"
tracing-subscriber = "0"

[features]
debug = []
