[package]
name = "r2dma"
version = "0.1.6"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
derse.workspace = true
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
bindgen = "0"
pkg-config = "0"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
