[package]
name = "r2dma"
version = "0.1.7"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
libc.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
bindgen = "0"
pkg-config = "0"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0", features = ["chrono"] }
