[package]
name = "r2pc-demo"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
r2pc = { path = "../r2pc" }

clap = { version = "4", features = ["derive"] }
serde.workspace = true
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber = "0"
