[package]
name = "r2pc-demo"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
r2pc = { path = "../r2pc" }

clap.workspace = true
serde.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
