[package]
name = "r2pc-macro"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A Rust RPC framework."
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
