[package]
name = "r2pc"
version = "0.1.0"
authors.workspace = true
edition = "2024"
homepage.workspace = true
repository.workspace = true
description = "A Rust RPC framework."
license.workspace = true

[dependencies]
r2pc-macro = { version = "0.1.0", path = "../r2pc-macro" }

serde.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["full"] }
tokio-util = "0"
lockmap = "0"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0"
