[package]
name = "r2pc"
version = "0.1.0"
authors.workspace = true
edition = "2024"
homepage.workspace = true
repository.workspace = true
description = "A Rust RPC framework."
license.workspace = true

[features]
rdma = ["r2dma"]
default = []

[dependencies]
r2dma = { version = "0.1", path = "../r2dma", optional = true }
r2pc-macro = { version = "0.1.0", path = "../r2pc-macro" }

foldhash.workspace = true
serde.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bitflags = "2"
serde_json = "1"
bytes = "1"
dashmap = "6"

[dev-dependencies]
clap.workspace = true
tracing-subscriber.workspace = true
